<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_match_next"
        android:icon="@drawable/football_match_next"
        android:title="@string/title_match_next" />

    <item
        android:id="@+id/navigation_match_last"
        android:icon="@drawable/football_match_last"
        android:title="@string/title_match_last" />

    <item
        android:id="@+id/navigation_club"
        android:icon="@drawable/football_club"
        android:title="@string/title_club" />

    <item
        android:id="@+id/navigation_favorite_match"
        android:icon="@drawable/favorite_match"
        android:title="@string/title_favorite_match" />

    <item
        android:id="@+id/navigation_favorite_club"
        android:icon="@drawable/favorite_club"
        android:title="@string/title_favorite_club" />


</menu>
